--- a/builds/development/stylesheets/application.css
+++ b/builds/development/stylesheets/application.css
@@ -9,7 +9,7 @@ html, body {
 }
 
 body {
-	font-family: -apple-system, "Helvetica Neue", Helvetica, sans-serif;
+	font-family: "Arial", -apple-system, "Helvetica Neue", Helvetica, sans-serif;
 }
 
 #blocklyDiv{
